package clase2.vacunacion.service;
import clase2.vacunacion.model.Persona;
public interface ServiceVacunacion {
    String vacunar(Persona persona);
    //en interfaces todos son publicos no es necesario que lo pongamos
}
